# ETELLESCHAVES-Python-Portfolio

./: README.md
.devcontainer/: devcontainer.json
NERStreamlitApp/: .gitignore  MANIFEST.in  README.md  __init__.py  app.py  check_environment.py  environment.yml  init_spacy.py  install_pillow.sh  main.py  ner_processor.py  packages.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  setup.sh  streamlit_app.py  utils.py
NERStreamlitApp/.streamlit/: config.toml  requirements.txt  secrets.toml
NERStreamlitApp/sample_texts/: business.txt  tech_news.txt
StreamlitAppFinal/: README.md  __init__.py  requirements.txt  run.py
StreamlitAppFinal/src/: __init__.py  portfolio_analyzer.py
StreamlitAppFinal/utils/: __init__.py
TidyData_Project/: README.md  project-readme.md  tidy-data-project.py  tidy_federal_rd_data.csv
basic_streamlit_app/: README.md  main.py  requirements.txt
