[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.42.0", "setuptools-scm>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NERStreamlitApp"
version = "0.1.0"
description = "Custom Named Entity Recognition using spaCy and Streamlit"
requires-python = ">=3.8,<3.12"
dependencies = [
    "streamlit==1.24.0",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "spacy==3.8.0",
    "nltk==3.8.1",
    "pydantic==1.10.8",
    "typing-extensions==4.5.0",
]

[tool.setuptools]
py-modules = [] 