[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# NOTE: Dependencies are specified in requirements.txt
# This file is only for build configuration

[project]
name = "NERStreamlitApp"
version = "0.1.0"
description = "Custom Named Entity Recognition using spaCy and Streamlit"
requires-python = ">=3.10,<3.11"

[tool.setuptools]
packages = [] 